RESOLVED FIXED 262359
NetworkProcessConnection.cpp: fix incomplete type WebCore::Page
https://bugs.webkit.org/show_bug.cgi?id=262359
Summary NetworkProcessConnection.cpp: fix incomplete type WebCore::Page
Thomas Devoogdt
Reported 2023-09-29 01:52:47 PDT
webkitgtk-2.42.0/Source/WebKit/WebProcess/Network/NetworkProcessConnection.cpp:327:11: error: incomplete type ‘WebCore::Page’ used in nested name specifier 327 | Page::forEachPage([&] (auto& page) { | ^~~~~~~~~~~ PR: [2.42]: https://github.com/WebKit/WebKit/pull/18355 [main]: https://github.com/WebKit/WebKit/pull/18356
Attachments
EWS
Comment 1 2023-09-29 07:04:38 PDT
Committed 268649@main (d04b66189383): <https://commits.webkit.org/268649@main> Reviewed commits have been landed. Closing PR #18356 and removing active labels.
EWS
Comment 2 2023-09-29 08:07:34 PDT
Committed 266719.77@bugfix/NetworkProcessConnection-2.42 (e92f5f33fd26): <https://commits.webkit.org/266719.77@bugfix/NetworkProcessConnection-2.42> Reviewed commits have been landed. Closing PR #18355 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.