NetworkProcessConnection.cpp: fix incomplete type WebCore::Page

https://bugs.webkit.org/show_bug.cgi?id=262359

Reviewed by Michael Catanzaro.

webkitgtk-2.42.0/Source/WebKit/WebProcess/Network/NetworkProcessConnection.cpp:327:11: error: incomplete type ‘WebCore::Page’ used in nested name specifier
  327 |     Page::forEachPage([&] (auto& page) {
      |           ^~~~~~~~~~~

Signed-off-by: Thomas Devoogdt <thomas.devoogdt@barco.com>
Canonical link: https://commits.webkit.org/266719.77@bugfix/NetworkProcessConnection-2.42